<resources>
    <string name="app_name">Chain text</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="comma">,</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="div">&#247;</string>
    <string name="mult">&#215;</string>
    <string name="minus">&#8211;</string>
    <string name="plus_or_minus">&#177;</string>
    <string name="m">M</string>
    <string name="a">A</string>
    <string name="p">P</string>
    <string name="n">И</string>
    <string name="h">H</string>
</resources>